# hoard

./: .gitignore  .hoard.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  404.html  CHANGES.md  Cargo.toml  LICENSE  README.md  hoard_0.1.8.deb  hoard_0.2.0-beta.deb  index.html  install.fish  install.sh  markdown-page.html  newline_test.sh  rustfmt.toml  sitemap.xml  test_trove.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: lint.yml  release.yml  test.yml
assets/css/: styles.79816511.css
assets/js/: 0e384e19.30b09b24.js  0e384e19.f8c67ccf.js  17896441.3dda351a.js  1be78505.96094bd9.js  1f391b9e.e1881b5d.js  393be207.2778b62e.js  393be207.589a9595.js  707.2da1afa2.js  73faf082.7dd1e8ae.js  75.0b7af826.js  935f2afb.247c7ad7.js  935f2afb.f20b77a4.js  9e4087bc.2872ac2f.js  b2f554cd.71567c94.js  c4f5d8e4.8d45fd1a.js  c4f5d8e4.e5664102.js  common.5580e243.js  main.00f09dd9.js  main.4960ad78.js  main.94477b2d.js  runtime~main.56d6f651.js  runtime~main.75bae3c2.js  runtime~main.e1ae7fd4.js
blog/: archive.html
data/: db.json
docs/: intro.html
example_troves/: Readme.md  git.yml
libs/hoardlib/: Cargo.toml
libs/hoardlib/src/: lib.rs  utils.rs
libs/hoardlib/src/command/: error.rs  mod.rs  parameters.rs
libs/hoardlib/src/trove/: error.rs  mod.rs
src/: cli_commands.rs  config.rs  filter.rs  gpt.rs  hoard.rs  main.rs  sync_models.rs  util.rs
src/command/: argument.rs  command.rs  error.rs  hoard_command.rs  mod.rs  new_command.rs  parameters.rs  trove.rs
src/control/: merge.rs  mod.rs  prompts.rs
src/core/: error.rs  mod.rs  parameters.rs  trove.rs
src/gui/: commands_gui.rs  event.rs  help.rs  merge.rs  mod.rs  parameter_input.rs  prompts.rs  theme.rs  tui_test.rs
src/gui/inline_edit/: controls.rs
src/gui/list_search/: controls.rs  gpt_controls.rs  key_not_set_controls.rs  mod.rs  render.rs
src/gui/new_command/: controls.rs  render.rs
src/gui/parameter_input/: controls.rs  render.rs
src/resources/: cli.yaml
src/shell/: hoard.bash  hoard.fish  hoard.zsh
src/ui/: event.rs  mod.rs
src/ui/search/: controls.rs  mod.rs  render.rs
