[package]
name = "hoard-rs"
version = "1.0.1"
edition = "2021"
readme = "README.md"
license = "MIT"
authors = ["Denis Heid"]
description = "hoard - cli command organizer written in Rust"
homepage = "https://hyde46.github.io/hoard/"
repository = "https://github.com/Hyde46/hoard"

[package.metadata.deb]
maintainer = "Denis Heid"
copyright = "2022, Denis Heid"
license-file = ["LICENSE"]
depends = "$auto"
section = "utility"

[package.metadata.rpm]
package = "hoard"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[[bin]]
name = "hoard"
path = "src/main.rs"

[dependencies]
# Command lien argument parser
clap = { version = "2.33.3", features = ["yaml"] }
# pretty dialogues in terminal
dialoguer = "0.10.2"
termion = "1.5.6"
# Yaml support to save/load command pallettes
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
anyhow = "1.0.58"
dirs = "4.0.0"
log = "0.4"
eyre = "0.6"
simple_logger = "2.2.0"
prettytable-rs = "0.8.0"
tui = { version = "0.18.0", features = ["termion"]}
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8.4", default-features = false, features = ["std"] }
thiserror = "1.0"
crossbeam-channel = "0.5.6"
tokio = { version = "1.20.0", features = ["full"] }
array_tool = "1.0.3"
reqwest = {version="0.11.11"}
url = {version="2.2.2"}
console = "0.15.1"

[dev-dependencies]
tempfile = "3.3.0"
