[package]
name = "hoard-rs"
version = "1.4.2"
edition = "2021"
readme = "README.md"
license = "MIT"
authors = ["Denis Heid"]
description = "hoard - cli command organizer written in Rust"
homepage = "https://hyde46.github.io/hoard/"
repository = "https://github.com/Hyde46/hoard"

[package.metadata.deb]
maintainer = "Denis Heid"
copyright = "2022, Denis Heid"
license-file = ["LICENSE"]
depends = "$auto"
section = "utility"

[package.metadata.rpm]
package = "hoard"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[[bin]]
name = "hoard"
path = "src/main.rs"

[dependencies]
# Command line argument parser
clap = { version = "4.4.4", features = ["derive"] }
# pretty dialogues in terminal
dialoguer = "0.10.3"
termion = "2.0.1"
# Yaml support to save/load command pallettes
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
anyhow = "1.0.71"
dirs = "4.0.0"
log = "0.4"
eyre = "0.6"
simple_logger = "4.1.0"
prettytable-rs = "0.10.0"
ratatui = { version = "0.22.0", features = ["termion"] }
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8.4", features = ["std"] }
thiserror = "1.0"
crossbeam-channel = "0.5.8"
tokio = { version = "1.25.0", features = ["full"] }
array_tool = "1.0.3"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
url = { version = "2.4.0" }
console = "0.15.7"
enum-iterator = "1.4.0"
base64 = "0.21.2"
chatgpt_blocking_rs = "0.1.1"
dotenv = "0.15.0"
h2 = "0.3.20"

[dev-dependencies]
tempfile = "3.3.0"
