[package]
name = "hoardlib"
version = "0.1.0"
edition = "2021"

[dependencies]

# Yaml support to save/load command pallettes
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
# Comfortable error handling
anyhow = "1.0.71"
log = "0.4"
# print tables to terminal
prettytable-rs = "0.10.0"
rand = { version = "0.8.4", features = ["std"] }